<resources>
    <string name="app_name">RaulRojoICalculatorWithStaticLayouts</string>
    <string name="calculator_text">5555</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="sign_div">/</string>
    <string name="sign_sub">-</string>
    <string name="sign_add">+</string>
    <string name="sign_clear">C</string>
    <string name="decimal_point">.</string>
    <string name="sign_mul">x</string>
    <string name="sign_resolve">=</string>
</resources>