<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="displayText"
            type="String" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@color/background_calculator">

        <EditText
            android:id="@+id/display_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="8dp"
            android:text="@{displayText}"
            android:textColor="@color/black"
            android:textSize="65sp"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="6dp"
            android:background="@color/line_color" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_one"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_two"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_three"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_div"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/sign_div"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_four"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_five"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_six"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_sub"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/sign_sub"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_seven"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_eight"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_nine"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/sign_add"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/sign_clear"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/number_zero"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/decimal_point"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_equals"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_button"
                    android:backgroundTint="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/sign_resolve"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</layout>